sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.error
AlgCombSort:3: error: value ecart is not a member of object Double
  Double ecart = getNombreValeurs();
         ^AlgCombSort:5: error: not found: value ecart
  while(ecart>1 || chg){
        ^AlgCombSort:7: error: not found: value ecart
    if(ecart>1){
       ^AlgCombSort:8: error: not found: value ecart
      ecart = ecart/1.3;
      ^AlgCombSort:11: error: not found: value ecart
    while(i+ecart<getNombreValeurs()){
            ^AlgCombSort:12: error: not found: value ecart
      if(plusPetit(i+ecart,i)){
                     ^AlgCombSort:13: error: not found: value ecart
        echange(i+ecart,i);
                  ^