sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.code
def combSort() {
  Double ecart = getNombreValeurs();
  var chg = true;
  while(ecart>1 || chg){
    chg = false;
    if(ecart>1){
      ecart = ecart/1.3;
    }
    var i = 0;
    while(i+ecart<getNombreValeurs()){
      if(plusPetit(i+ecart,i)){
        echange(i+ecart,i);
      }
      i += 1;
    }
  }
}